<resources>
    <string name="app_name">Cooker</string>
    <string name='fb_app_id'>449463875445362</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_cooks">CooksActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_chef">ChefActivity</string>

    <string name="viewListedItems">View Listed Items</string>
    <string name="addNewItem">Add new item</string>
    <string name="deleteItem">Delete item</string>
    <string name="updateProfile">Update Profile</string>
    <string name="updateAccount">Update Account</string>
    <string name="orderHistory">Order History</string>
    <string name="share">Share</string>
    <string name="signout">Sign Out</string>
    <string name="receivedOrders">Received Orders</string>
    <string name="viewCart">View Cart</string>
    <string name="cartactionbutton">Cart</string>

    <string name="viewChefs">View Chefs</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="dinnerPickUpTime">Dinner 6-8 pm</string>
    <string name="lunchPickUpTime">Lunch 11-1 pm</string>

    <string-array name="quantity">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
