<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/viewChefs"
            android:icon="@drawable/ic_view_chefs"
            android:title="@string/viewChefs" />
        <item
            android:id="@+id/updateAccount"
            android:icon="@drawable/ic_update_account"
            android:title="@string/updateAccount" />
        <item
            android:id="@+id/viewCart"
            android:icon="@drawable/ic_view_cart"
            android:title="@string/viewCart" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_order_history"
            android:title="@string/orderHistory" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/signOut"
            android:icon="@drawable/ic_signout"
            android:title="@string/signout" />
    </group>
</menu>
