<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/viewListedItems"
            android:icon="@drawable/ic_view_items"
            android:title="@string/viewListedItems" />
        <item
            android:id="@+id/addNewItem"
            android:icon="@drawable/ic_add_new_item"
            android:title="@string/addNewItem" />
        <item
            android:id="@+id/deleteItem"
            android:icon="@drawable/ic_delete_item"
            android:title="@string/deleteItem" />
        <item
            android:id="@+id/updateAccount"
            android:icon="@drawable/ic_update_account"
            android:title="@string/updateAccount" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_order_history"
            android:title="@string/orderHistory" />
        <item
            android:id="@+id/receivedOrders"
            android:icon="@drawable/ic_received_order"
            android:title="@string/receivedOrders" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="Share" />
            <item
                android:id="@+id/signOut"
                android:icon="@drawable/ic_signout"
                android:title="Sign Out" />
        </menu>
    </item>

</menu>
